--- a/Server/client/src/components/Wishlist/style.css
+++ b/Server/client/src/components/Wishlist/style.css
@@ -94,6 +94,9 @@
     padding: 0;
     justify-content: space-between;
   }
+  .wishlist__single {
+    justify-content: center;
+  }
   .wishlist__products .collection__item {
     margin: 0;
   }
