--- a/Server/client/src/pages/ProductDetail/style.css
+++ b/Server/client/src/pages/ProductDetail/style.css
@@ -211,6 +211,24 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
+.addOrSave-btn .addOrSave-icon {
+  fill: rgb(130, 130, 130);
+  fill-opacity: 1;
+  fill-rule: nonzero;
+  stroke: rgb(130, 130, 130);
+  stroke-dasharray: none;
+  stroke-dashoffset: 0px;
+  stroke-linecap: butt;
+  stroke-linejoin: miter;
+  stroke-miterlimit: 4;
+  stroke-opacity: 1;
+  stroke-width: 0.2px;
+  paint-order: normal;
+  vector-effect: none;
+  opacity: 1;
+  mix-blend-mode: normal;
+  isolation: auto;
+}
 
 .addOrSave-text {
   font-family: "Oswald";
@@ -404,7 +422,7 @@
   display: none;
 }
 
-.detailsContainerTwo__url-mobile{ 
+.detailsContainerTwo__url-mobile {
   display: none;
 }
 
@@ -526,12 +544,12 @@
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-  
+
     background-color: white;
   }
   .addOrSaveContainer {
     display: flex;
-    justify-content: space-between
+    justify-content: space-between;
   }
   .addOrSave-btn {
     margin: 0;
@@ -539,13 +557,12 @@
     padding: 0;
   }
 
-  #addOrSave-btnBlack{
-    margin:0;
+  #addOrSave-btnBlack {
+    margin: 0;
   }
-
 }
 
-@media screen and (max-width: 320px){
+@media screen and (max-width: 320px) {
   .detailsContainerTwo__title {
     font-size: 1.5em;
   }
